testData/inspections/missingfile/createMissingIncludeFile.adoc
:var: ab

<error descr="include file not found: /src/ab/missing.adoc">include::{var}/missing.adoc[]</error>
